force-app/main/default/objects/Edition_Websites__c/Edition_Websites__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - Child Object of Edition. It contains the websites name and link records to be shown on the footer after login to Customer Center</description>
    <label>Edition Websites</label>
    <nameField>
        <label>Edition Websites Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Edition Websites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>