force-app/main/default/objects/Edition_Websites__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Edition Websites</relationshipLabel>
    <relationshipName>Edition_Websites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>