force-app/main/default/objects/Edition_Websites__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Defines the order of Websites shown on Footer</description>
    <label>Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>