force-app/main/default/objects/Edition_Websites__c/fields/Website_Label__c.field-meta.xml
<CustomField>
    <fullName>Website_Label__c</fullName>
    <description>Defines the label for your website link</description>
    <label>Website Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>