force-app/main/default/objects/Edition_Websites__c/fields/Website_Link__c.field-meta.xml
<CustomField>
    <fullName>Website_Link__c</fullName>
    <description>Contains the Website link url</description>
    <label>Website Link</label>
    <type>Url</type>
</CustomField>