force-app/main/default/objects/Edition_Websites__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Edition__c</columns>
    <columns>Website_Label__c</columns>
    <columns>Website_Link__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>